<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".GastoCaloricoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gasto_titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/tvTmb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center"
        tools:text="Sua Taxa Metabólica Basal (TMB) é: 1800 kcal" />

    <TextView
        android:id="@+id/tvGastoTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        tools:text="Seu Gasto Calórico Diário Total é: 2500 kcal" />

    <Button
        android:id="@+id/btnCalcularPesoIdeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/gasto_botao_ideal" />

    <Button
        android:id="@+id/btnVoltarGasto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imc_botao_voltar"
        style="?android:attr/borderlessButtonStyle" />

</LinearLayout>